tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/ProgramBenefitConfig__c.object-meta.xml
<CustomObject>
    <label>Program Benefit Config</label>
    <pluralLabel>Program Benefit Configs</pluralLabel>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Program-scoped feature configuration for a Benefit. Controls how a Benefit behaves across Census, Interview, disbursement, billing, and documentation features within the EHR package. One record per active Benefit. When a Benefit is replaced via BenefitReplacementService, a new config is cloned and the old one is deactivated.</description>
</CustomObject>