tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Allow_Ad_Hoc_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Allow_Ad_Hoc_Disbursement__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, staff can create single ad hoc disbursements for this benefit from the Program Census or Case page.</description>
    <label>Allow Ad Hoc Disbursement</label>
    <type>Checkbox</type>
</CustomField>