tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Available_for_Case_Management__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Case_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Case Management staff can select this benefit in disbursement, interview, and note workflows.</description>
    <label>Available for Case Management</label>
    <type>Checkbox</type>
</CustomField>