tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Available_for_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Clinical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Clinical staff can select this benefit in disbursement, interview, and note workflows.</description>
    <label>Available for Clinical</label>
    <type>Checkbox</type>
</CustomField>