tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Available_for_Peer__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Peer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Peer Support staff can select this benefit in disbursement, interview, and note workflows.</description>
    <label>Available for Peer</label>
    <type>Checkbox</type>
</CustomField>