tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Benefit record this configuration governs. Should point to the active (non-replaced) Benefit.</description>
    <label>Benefit</label>
    <referenceTo>Benefit</referenceTo>
    <relationshipLabel>Program Benefit Configs</relationshipLabel>
    <relationshipName>ProgramBenefitConfigs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>