tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Census_Counting_Method__c.field-meta.xml
<CustomField>
    <fullName>Census_Counting_Method__c</fullName>
    <description>Determines what event type counts toward census metrics for this benefit.</description>
    <inlineHelpText>Assignment = counts when participant is assigned. Session = counts on each disbursement. Disbursement = counts quantity disbursed.</inlineHelpText>
    <label>Census Counting Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Session</fullName>
                <default>true</default>
                <label>Session</label>
            </value>
            <value>
                <fullName>Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>