tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Counts_Toward_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, disbursements count toward program attendance/session metrics in reporting.</description>
    <label>Counts Toward Attendance</label>
    <type>Checkbox</type>
</CustomField>