tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/CPT_Enabled__c.field-meta.xml
<CustomField>
    <fullName>CPT_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the CPT code selector is available when recording a disbursement or interview service for this benefit.</description>
    <inlineHelpText>Requires Is Billable to also be checked for billing export inclusion.</inlineHelpText>
    <label>CPT Enabled</label>
    <type>Checkbox</type>
</CustomField>