tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Controls the sort order of this benefit within the Program Services workspace and pickers. Lower numbers appear first.</description>
    <label>Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>