tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Generates_Interaction_Summary__c.field-meta.xml
<CustomField>
    <fullName>Generates_Interaction_Summary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a BenefitDisbursement for this benefit automatically creates a linked InteractionSummary (clinical note).</description>
    <inlineHelpText>Use for clinical and case management benefits that require a service note to be documented.</inlineHelpText>
    <label>Generates Interaction Summary</label>
    <type>Checkbox</type>
</CustomField>