tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Goal_Linkage_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Goal_Linkage_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, disbursements of this benefit can be linked to GoalAssignment progress updates.</description>
    <inlineHelpText>Use for benefits that directly support measurable treatment plan goals.</inlineHelpText>
    <label>Goal Linkage Enabled</label>
    <type>Checkbox</type>
</CustomField>