tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Interview_Auto_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Interview_Auto_Disbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, selecting this benefit in an interview automatically creates a BenefitDisbursement on interview submission.</description>
    <inlineHelpText>Auto-creates a disbursement when the interview is submitted with this benefit selected.</inlineHelpText>
    <label>Interview Auto-Disbursement</label>
    <type>Checkbox</type>
</CustomField>