tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked this config is ignored by all resolvers. Automatically set to false when a Benefit is retired or replaced.</description>
    <inlineHelpText>Uncheck to hide this benefit from all program-facing features without deleting the configuration history.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>