tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, disbursements of this benefit are eligible to appear in the billing export.</description>
    <inlineHelpText>Check for Medi-Cal / grant-billable services.</inlineHelpText>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>