tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Is_Census_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Census_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, disbursements of this benefit are counted in Program Census metrics.</description>
    <inlineHelpText>Check to include this benefit in Census counts and dashboards.</inlineHelpText>
    <label>Is Census Eligible</label>
    <type>Checkbox</type>
</CustomField>