tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Is_Interview_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Interview_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this benefit appears as a selectable service action in Interview templates assigned to the same program.</description>
    <inlineHelpText>Check to make this benefit available in interview service action pickers.</inlineHelpText>
    <label>Is Interview Enabled</label>
    <type>Checkbox</type>
</CustomField>