tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Is_Mobile_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Mobile_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this benefit can be disbursed or documented from the mobile (PWA) interface.</description>
    <inlineHelpText>Check to expose this benefit in mobile and kiosk interfaces.</inlineHelpText>
    <label>Is Mobile Available</label>
    <type>Checkbox</type>
</CustomField>