tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Internal notes for Program Managers about this benefit's configuration, eligibility rules, or operational context.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>