tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program this config belongs to. Denormalized from Benefit.ProgramId for efficient query filtering.</description>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Program Benefit Configs</relationshipLabel>
    <relationshipName>ProgramBenefitConfigs</relationshipName>
    <type>Lookup</type>
</CustomField>