tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Requires_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Requires_Enrollment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, a participant must have an active ProgramEnrollment in the owning Program before a disbursement can be recorded.</description>
    <inlineHelpText>Uncheck only for benefits that can be delivered to walk-in or unenrolled participants.</inlineHelpText>
    <label>Requires Enrollment</label>
    <type>Checkbox</type>
</CustomField>