tgthrProgramManagement/force-app/main/default/objects/ProgramBenefitConfig__c/fields/Requires_Signature__c.field-meta.xml
<CustomField>
    <fullName>Requires_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a participant signature is required before a disbursement of this benefit can be finalized.</description>
    <inlineHelpText>Use for benefits that require a signed consent or receipt.</inlineHelpText>
    <label>Requires Signature</label>
    <type>Checkbox</type>
</CustomField>